<resources>
    <string name="app_name">Super Gluu</string>
    <!--<string name="app_header">Gluu oxPush2</string>-->

    <string name="oxpush2_into_text">Open Source Mobile Authentication from Gluu</string>

    <string name="label_user_name">Username</string>
    <string name="label_authentication_method">Authentication Mode</string>
    <string name="label_authentication_type">Authentication Type</string>
    <string name="keyHandle">Key handle</string>
    <string name="label_created">Created</string>
    <string name="label_issuer">Issuer</string>
    <string name="label_application">Application</string>

    <string name="button_scan_oxpush2">Scan QR code</string>
    <string name="button_approve">Approve</string>
    <string name="button_decline">Deny</string>
    <string name="button_delete">Delete</string>

    <string name="failed_subscribe_push_notification">Failed to subscribe application for push notifications</string>

    <string name="scan_oxpush2_prompt">Scanning QR code</string>
    <string name="process_qr_code">Processing QR code</string>
    <string name="canceled_process_qr_code">Canceled scanning QR code</string>

    <string name="wrong_u2f_metadata">Failed to get Fido U2F metadata</string>
    <string name="failed_process_challenge">Fido U2F challenge was rejected</string>
    <string name="wrong_token_response">Fido U2F token response is invalid</string>
    <string name="failed_process_response">Fido U2F response was rejected</string>
    <string name="failed_process_status">Get unexpected Fido U2F status</string>
    <string name="invalid_qr_code">QR code contains invalid request</string>
    <string name="no_valid_key_handles">The aren\'t valid devices associated with specified application. Can you try again and remove expired key(s) associated this application</string>

    <string name="process_authentication_start">Authentication...</string>
    <string name="process_enrol_start">Registering...</string>
    <string name="process_deny_start">Deny starting...</string>
    <string name="process_u2f_request">Processing Fido U2F request, please wait…</string>

    <string name="auth_result_success">You have successfully authenticated!</string>
    <string name="enrol_result_success">Your enrollment was successful!</string>
    <string name="auth_result_failed">Authentication failed!</string>
    <string name="deny_result_success">The authentication request has been denied or failed.</string>
    <string name="deny_result_failed">Decline Failed</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="challenge_doesnt_match">Challenges doesn\'t match</string>

    <string name="one_step">One Step</string>
    <string name="two_step">Two Step</string>

    <string name="keyHandleCell">Key for </string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="approve_delete">Are you sure you want to delete this key?</string>
    <string name="delete_key_sub_title">You will need to re-enroll your device if you login to this ce-release again</string>
    <string name="info">Key Information</string>
    <string name="no_keyhandles">No keyHandles found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="deleted_keyhandle_event">deleted_keyhandle_event</string>
    <string name="update_list">Update list data source</string>

    <string name="no_date">No date</string>

    <string name="delete_keyHandle_event">delete_keyHandle_event</string>
    <string name="delete_keyHandle_message">delete_keyHandle_message</string>
    <string name="delete_keyHandle">delete keyHandle</string>
    <string name="keyHandle_to_delete">KeyHandle for delete</string>

    <string name="noLogs">No Logs</string>
    <string name="noKeys">No Keys</string>

    <string name="accept">Accept and Continue</string>
    <string name="welcome">Welcome to Super Gluu!</string>
    <string name="scan_text">You may be presented with a QR code for enrollment or authentication. Click the button to open your QR scanner.</string>

    <string name="settings_title">Settings</string>
    <string name="pin_code_settings">Pin code</string>
    <string name="pin_code_text">When enabled, access to your Super Gluu app will be protected by a pin code of your choice.</string>

    <string name="set_new_pin_code">Set pin code</string>
    <string name="enter_pin_code">Enter Pin code</string>
    <string name="reset_pin_code">Change Pin code</string>
    <string name="tur_on_pin_code">Turn on</string>
    <string name="tur_off_pin_code">Turn off</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="pin_code_enable_title">Add a Pin Code?</string>
    <string name="pin_code_enable_question">Protect access to Super Gluu by adding a pin code.</string>

    <!--<string name="available_keys">Available keys(%s)</string>-->
    <string name="available_keys">Available keys</string>
    <string name="text_keys">When you login with Super Gluu, a private key is generated and stored on your phone.</string>
    <string name="rename_keys">To change a name of Key, hold down on it for few seconds</string>

    <string name="to_continue">To continue, press Approve</string>
    <string name="seconds_left">seconds left</string>
    <string name="timer">40</string>

    <string name="clear_logs">Do you want to clear the logs?</string>
    <string name="clear_log_title">Are you sure you want to delete this log record?</string>
    <string name="clear_log_empty_title">No selected log record(s).</string>
    <string name="change_pin">Do you want to change current Pin?</string>

    <string name="app_locked">Application is locked, please wait...</string>
    <string name="number_attempts">Number of attempts:</string>
    <string name="text_attempts">Super Gluu will be locked for 10 minutes after this many failed attempts</string>

    <string name="rename_key_name">Do you want to change key name?</string>
    <string name="new_key_name_title">Change key name</string>
    <string name="enter_new_key_name">Enter a new name for your key:</string>

    <string name="ssl_connection_settings">SSL Connection Settings</string>
    <string name="trust_all_certificate">Trust all (SSL)</string>
    <string name="warning_trust_all_certificate">WARNING: Only enable Trust all (SSL) for testing purposes! It is critically important to validate the SSL certificate for communication between Super Gluu and the identity provider.</string>

    <string name="fingerprint_title">Fingerprint</string>

    <string name="ad_free_text">Upgrade to ad free for $0.99/month</string>
    <string name="ad_free_title">Upgrade Now!</string>
    <string name="upgrate_ad_free">Upgrade to AD-Free</string>
    <string name="restore_subsc">Restore Purchase</string>

    <string name="banner_ad_unit_id">ca-app-pub-3932761366188106/5255061278</string>

    <!--Strings for fingerprint-->
    <string name="application_name">FingerprintDialog</string>
    <string name="action_settings">Settings</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>

</resources>
