<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColorLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_row"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pinCodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="@color/blackColor"
            android:layout_marginTop="40dp"
            android:text="@string/pin_code_enable_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/pinSubCodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="18dp"
            android:text="@string/pin_code_enable_question"
            android:textAlignment="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center">

            <Button
                android:id="@+id/yes_button_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:textSize="17dp"
                android:background="@drawable/rounded_button"
                android:text="@string/yes"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/no_button_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAllCaps="false"
                android:textSize="17dp"
                android:background="@drawable/rounded_button_red_fill"
                android:text="@string/no"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dp" />

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>