<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_parent_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColorLight"
    android:orientation="vertical">

    <include
        android:id="@+id/actionBarSettings"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        layout="@layout/custom_action_bar" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColorLight"
    android:layout_marginTop="70dp"
    android:paddingBottom="20dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayColorLight"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/switch_pin_code"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="25dp"
                android:text="@string/pin_code_settings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blackColor"
                android:textColorLink="@color/greenColor"
                android:textSize="18dp" />

            <Switch
                android:id="@+id/switch_pin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="18dp"
                android:thumbTint="@color/greenColor"
                android:trackTint="@color/greenColor" />

        </RelativeLayout>

        <TextView
            android:id="@+id/settings_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/switch_pin_code"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="19dp"
            android:text="@string/pin_code_text"
            android:textColor="@color/grayColor" />

        <LinearLayout
            android:id="@+id/numbers_attempts_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/set_reset_pin_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:gravity="left"
                    android:paddingTop="15dp"
                    android:text="@string/reset_pin_code"
                    android:textAllCaps="false"
                    android:textSize="17dp" />

                <ImageView
                    android:id="@+id/settingArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/settings_back_arrow" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/number_attempts"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blackColor"
                    android:textSize="17dp" />

                <com.hrules.horizontalnumberpicker.HorizontalNumberPicker
                    android:id="@+id/horizontal_number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/numbers_attempts_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_attempts"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grayColor"
            android:textSize="19dp"/>

    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:id="@+id/view_ad_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.06"
        android:background="@drawable/black_border"
        android:elevation="20dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ad_free_text"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_ad_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_fio_shape"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:text="@string/ad_free_title"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>